Wed Jul 10 23:23:18 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/logger.rb (#add): Remove incorrect rdoc for return value
	  [Bug #8567] Reported by Tim Pease.

Wed Jul 10 23:12:00 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_subpos): make public function.

Wed Jul 10 22:44:19 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c: Add a static assertion for RBIGNUM_EMBED_LEN_MAX.

Wed Jul 10 22:31:25 2013  Masaki Matsushita  <glass.saga@gmail.com>

	* string.c (rb_str_index): cache single byte flag and some
	  cosmetic changes.

Wed Jul 10 22:03:27 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_2comp): Don't use bary_plus_one.
	  (bary_add_one): Replaced by the implementation of bary_plus_one.

Wed Jul 10 20:48:22 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (sizeof_bdigit_dbl): check sizeof(BDIGIT_DBL).

	* internal.h (STATIC_ASSERT): move from enum.c.

Wed Jul 10 20:08:21 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (SIZEOF_BDIGIT_DBL): Add a ifdef guard for test.

Wed Jul 10 14:18:59 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (fork_daemon): kill the other threads all and abandon the
	  kept mutexes.

Wed Jul 10 11:35:36 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/net/http/test_http.rb (TestNetHTTP_v1_2#test_get,
	  TestNetHTTP_v1_2_chunked#test_get): shouldn't check
	  HttpResponse#decode_content if Zlib is not available.
	  ko1 complained via IRC.

Wed Jul 10 10:20:07 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/rbinstall.rb: always require rubygems to stabilize rubygems
	  related status like whether Gem::Specification is defined or not.

	* tool/rbinstall.rb (Gem::Specification.unresolved_deps): define stub.

Wed Jul 10 08:21:15 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Import RubyGems 2.1
	* test/rubygems:  Ditto.

Wed Jul 10 07:34:34 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/ext/ext_conf_builder.rb:  Remove siteconf file after
	  building the gem.